style: card size limited to content

--- a/resources/assets/styles/layouts/_posts.css
+++ b/resources/assets/styles/layouts/_posts.css
@@ -23,6 +23,7 @@
   border-top: solid var(--border-medium) var(--light-red);
   background: var(--white);
   box-shadow: 0 0 var(--spacing-5) rgba(0, 0, 0, 0.16);
+  height: max-content;
 }
 
 .pcc-story .card {
