--- a/resources/assets/styles/main.css
+++ b/resources/assets/styles/main.css
@@ -7,6 +7,7 @@
 @import "components/_pagination.css";
 @import "components/_tags.css";
 @import "components/_ribbons.css";
+@import "components/_modals.css";
 @import "layouts/_header.css";
 @import "layouts/_footer.css";
 @import "layouts/_events.css";
