--- a/resources/assets/styles/components/_forms.css
+++ b/resources/assets/styles/components/_forms.css
@@ -277,3 +277,9 @@ button.is-style-textonly:focus .icon {
     margin-top: 0;
   }
 }
+
+p.login-error {
+  color: var(--red);
+  font-size: var(--font-size-small);
+  font-weight: bold;
+}
