feat: add styles for classes and payment blocks

--- a/resources/assets/styles/components/blocks/blocks/_columns.css
+++ b/resources/assets/styles/components/blocks/blocks/_columns.css
@@ -1,4 +1,5 @@
-.wp-block-columns {
+.wp-block-columns,
+.wp-block-no-columns {
   border-top: solid var(--border-medium) var(--dark-blue);
   margin: 0 auto;
   padding: var(--spacing-20) 0 0;
