--- a/resources/assets/styles/layouts/_events.css
+++ b/resources/assets/styles/layouts/_events.css
@@ -101,7 +101,7 @@
   display: inline-block;
 }
 
-.single-pcc-event .event-header .address {
+.single-pcc-event .event-header .address, .single-pcc-event .event-header .price  {
   margin-top: 0;
 }
 
@@ -224,7 +224,7 @@
     position: relative;
   }
 
-  .single-pcc-event .event-header .meta p.address {
+  .single-pcc-event .event-header .meta p,  {
     margin-top: var(--spacing-12);
   }
 
